scss/style.scss
@import "config";

// Global
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Mali", sans-serif;
  padding-bottom: 5rem;
  overflow-x: hidden;
}

// Header
header {
  @include flexBox($justify: space-between);
  top: 0;
  background-color: $light-blue;
  padding: 1rem 2rem;
  position: fixed;
  width: 100%;
  z-index: 1;
  height: 100px;
  min-height: 100px;
}
.hamburger {
  display: none;
}

.logo {
  font-family: "Satisfy", cursive;
  font-size: 2.5rem;
  // z-index: 1;

  a {
    color: $pink-color;
  }
}

.nav {
  ul {
    display: flex;

    li {
      padding: 2rem 1rem;
    }

    a {
      padding: 0.3rem 0;
      text-transform: uppercase;
      color: $pink-color;
      font-weight: 500;
      letter-spacing: 0.15rem;
      position: relative;
      @include transition;

      &:hover {
        transform: scale(1.2);
      }

      &::before {
        content: "";
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 2px;
        background: $pink-color;
        transform: scaleX(0);
        transform-origin: left;
        @include transition;
      }

      &:hover::before {
        transform: scaleX(1);
      }
    }
  }
}

// Showcase
.showcase {
  padding: 3em 0 3rem 0;
  width: 80%;
  margin: auto;
  height: 100%;

  .showcase-inner {
    @include flexBox;

    & > div {
      margin: 0 1rem;
    }

    &-image {
      @include flexBox($direction: column);
      flex: 0 1 50vw;

      img {
        border-radius: 2rem;
      }
    }

    &-text {
      @include flexBox($direction: column, $align: stretch);
      flex: 0 1 50vw;
      line-height: 1.5;
      letter-spacing: 0.05rem;

      p {
        margin: 0.4rem 0;
      }

      .italic {
        font-style: italic;
        text-align: right;
        font-weight: 500;
      }
    }
  }
}

// Videos Page

// Videos Menu
.menu {
  position: fixed;
  top: 30%;
  left: 0;
  z-index: 1000;

  .btn-toggler {
    background: $purple-color;
    display: inline-block;
    -webkit-writing-mode: vertical-lr;
    -ms-writing-mode: tb-lr;
    writing-mode: vertical-lr;
    font-size: 1.5rem;
    padding: 0.5rem 0.3rem;
    border-top-right-radius: 9px;
    border-bottom-right-radius: 9px;
    padding-left: 1.2rem;
    transform: translateX(-12px);
    border: darken($purple-color, 6) 2px solid;
    cursor: pointer;
    @include transition(0.3s);

    &:hover {
      transform: translateX(0);
    }
  }

  &.show {
    .btn-toggler {
      transform: translateX(19vw);
    }
  }
}

#header.active {
  .menu-list {
    left: 0;
  }
}

.menu-list {
  position: absolute;
  width: 20vw;
  height: 100vh;
  top: 100%;
  left: -100%;
  background: url(../img/image-from-rawpixel-id-1016768-jpeg.jpg) no-repeat;
  background-position-y: -20px;
  background-position-x: -20px;
  @include transition(0.3s);

  &-item {
    padding: 0.5rem 0;
    text-align: center;

    &:nth-child(1) {
      margin-top: 1rem;
    }
  }
}

.video-main {
  @include flexBox(column, center, center);
  width: 100%;
  padding-top: 3em;
  text-align: center;

  .hero {
    @include flexBox;
    font-size: 2rem;
    font-family: "Mali", cursive;
    margin-bottom: 2rem;
    color: $dark-purle;
    width: 100%;
    height: 400px;
    min-height: 300px;
    background: url(../img/videobackground.jpg) no-repeat center center/cover;

    h3 {
      margin-top: 3rem;
      padding: 1rem 2rem;
      display: inline-block;
      background: #ffffff94;
      border-radius: 10px;
      letter-spacing: 0.1rem;
      width: 70%;
    }
  }

  .video-wrapper {
    margin-top: 2rem;

    h2 {
      color: $pink-color;
      font-size: 2rem;
      font-weight: normal;
      margin: 1rem 0;
    }
  }
}

// Tests Page
.test-menu-toggler {
  position: absolute;
  top: 100%;
  left: 0;
  padding: 0.3rem 0.8rem;
  background-color: $purple-color;
  border-bottom-right-radius: 7px;
  text-transform: uppercase;
  cursor: pointer;
  border: darken($purple-color, 6) 2px solid;
}

.test-menu {
  position: absolute;
  top: 100%;
  left: 0;
  padding: 2rem 0 0 0;
  background: $pastel-blue;
  border: 5px solid darken($pastel-blue, 10);
  transform: scale(0);
  transform-origin: top left;
  @include transition;
  z-index: -1;

  &-list {
    &-item {
      width: 100%;
      padding: 1rem 0;
      border-top: 1px solid darken($pastel-blue, 10);

      a {
        display: inline-block;
        padding: 0 1rem;
        @include transition;

        &:hover {
          transform: scale(1.2);
        }
      }
    }
  }

  &.show {
    transform: scale(1);
  }
}

.test-content {
  padding-top: 3rem;
  font-family: "Roboto", sans-serif;
  letter-spacing: 0.03rem;

  ol {
    list-style-type: lower-alpha;
  }

  .test-title {
    text-align: center;
    margin-bottom: 2rem;
    color: $dark-purle;
    font-family: "Mali", cursive;

    h1 {
      font-size: 3rem;
    }

    h2 {
      font-style: italic;
      font-weight: normal;
    }
  }

  .box {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 3rem;
    line-height: 1.7;

    & > div {
      margin: 1rem;
      padding: 1rem 1.5rem;
      border-radius: 1.5rem;

      h3 {
        font-size: 1.2rem;
      }

      ol {
        display: inline-block;
        margin-left: 1.2rem;
        font-size: 1.2rem;
      }
    }
  }

  .box1 .question-wrapper {
    background: $yellow-color;
    border: 4px dotted darken($yellow-color, 45%);
  }
  .box2 .question-wrapper {
    background: $pastel-blue;
    border: 4px dotted darken($pastel-blue, 45%);
  }
  .box3 .question-wrapper {
    background: $purple-color;
    border: 4px dotted darken($purple-color, 45%);
  }
  .box4 .question-wrapper {
    background: $light-green;
    border: 4px dotted darken($light-green, 45%);
  }
  .box5 .question-wrapper {
    background: $yellow-color;
    border: 4px dotted darken($yellow-color, 45%);
  }

  .box6 {
    @include flexBox(column, center, center);
    background: #e5daff;
    text-align: center;
    border-radius: 2rem;
    width: 85%;
    margin: 2rem auto;
    padding: 2rem;
    h2 {
      padding: 2rem 0;
    }
    & > div {
      display: flex;
    }

    h3 {
      span {
        color: #ff7e28;
        padding: 0 1rem;
      }
    }
  }

  .question-wrapper {
    margin: 2rem 0;
    padding: 1rem 1rem;
  }
}

// Objectives Page
#objects {
  width: 100%;

  .table-container {
    width: 100%;
    // overflow-x: auto;
    // _overflow: auto;
    margin: 0 0 1em;

    .tableizer-table {
      width: 100%;
      border-collapse: collapse;

      td {
        padding: 4px;
        border: 1px solid #ddd;
      }

      .main-title {
        background: $yellow-color;
      }

      .fixed-row {
        th {
          border: 1px solid #ddd;
          text-align: left;
          padding: 4px;
          top: 100px;
          position: -webkit-sticky;
          position: sticky;
          z-index: 1;
        }
      }
    }
  }
}
@import "mobile";

